Fixing padding layout issue on bottom image of careers page

--- a/web/app/themes/scb/assets/styles/pages/_careers.scss
+++ b/web/app/themes/scb/assets/styles/pages/_careers.scss
@@ -274,6 +274,7 @@
         @include min-screen($breakpoint-medium) {
           float: left;
           width: $column * 9;
+          padding-right: 10px;
         }
       }
     }
